service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-for-all
spec:
  selector:
    app: real-estate-for-all
  ports:
    - port: 80
      targetPort: 5173
  type: LoadBalancer
